Android: Added album art of each artist in Artist cell in MobileLibraryBrowser. It is way faster than I thought with a gradient over album art. The content isn't 100% dynamic yet. Several layout bug fixes throughout the app.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -64,10 +64,11 @@
   </FrameLayout>
   <LinearLayout
       android:id="@+id/player_layoutButtons"
-      android:orientation="horizontal"
-      android:gravity="center"
       android:layout_width="fill_parent"
-      android:layout_height="60dp">
+      android:layout_height="60dp"
+      android:background="@color/actionbar"
+      android:orientation="horizontal"
+      android:gravity="center">
     <ImageButton
       android:id="@+id/player_btnPrevious"
       android:layout_width="60dp"
