--- a/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/LibraryPreferences.axml
@@ -10,46 +10,50 @@
         android:layout_height="wrap_content"
         android:text="Library Preferences"
         android:textSize="16dp"
-        android:padding="6dip" />
+        android:padding="6dp" />
     <TextView
         android:id="@+id/libraryPreferences_lblEnableSync"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enable other users to sync with this library:"
         android:textSize="12dp"
-        android:padding="6dip" />
+        android:padding="6dp" />
     <ToggleButton
         android:id="@+id/libraryPreferences_btnEnableSync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="6dip" />
+        android:padding="6dp" />
     <TextView
         android:id="@+id/libraryPreferences_lblHTTPPort"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sync server HTTP port:"
         android:textSize="12dp"
-        android:padding="6dip" />
+        android:padding="6dp" />
     <EditText
         android:id="@+id/libraryPreferences_txtHTTPPort"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12dp"
-        android:padding="6dip" />
+        android:padding="6dp" />
     <Button
         android:id="@+id/libraryPreferences_btnResetLibrary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content"        
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_selector"
         android:text="Reset Library"
         android:textColor="@color/button_textcolor"
-        android:padding="6dip" />
+        android:textSize="14dp"        
+        android:padding="6dp" />
     <Button
         android:id="@+id/libraryPreferences_btnUpdateLibrary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_selector"
         android:text="Update Library"
         android:textColor="@color/button_textcolor"        
-        android:padding="6dip" />
+        android:textSize="14dp"        
+        android:padding="6dp" />
 </LinearLayout>
