--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -1,85 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="52dp"
+   android:background="@drawable/list_selector"
    android:minHeight="52dp"
-   android:maxHeight="52dp"
-   android:paddingLeft="8dp"
-   android:paddingRight="8dp"
-   android:gravity="center_vertical"
-   android:orientation="horizontal">
-  <TextView
-    android:id="@+id/mobileLibraryBrowserCell_index"
-    android:layout_width="32dp"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:textColor="@color/list_secondarytext"
-    android:textSize="18dp" />
-  <TextView
-    android:id="@+id/mobileLibraryBrowserCell_lblTitle"
-    android:layout_width="0dp"
-    android:layout_height="fill_parent"    
-    android:layout_weight="1"
-    android:layout_marginLeft="8dp"
-    android:gravity="center_vertical"
-    android:ellipsize="end"
-    android:singleLine="true"
-    android:textColor="@color/list_text"
-    android:textSize="18dp" />
+   android:maxHeight="52dp">
   <LinearLayout
-    android:id="@+id/mobileLibraryBrowserCell_layoutSubtitle"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content" 
-    android:layout_weight="1"
-    android:layout_marginLeft="8dp"
-    android:orientation="vertical">
+    android:id="@+id/mobileLibraryBrowserCell_layoutAlbums"
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+    android:layout_gravity="right"    
+    android:layout_marginRight="4dp"
+    android:orientation="horizontal">
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageAlbum1"
+      android:layout_width="44dp"
+      android:layout_height="44dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="2dp"
+      android:layout_marginRight="2dp"
+      android:background="@color/actionbar" />
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageAlbum2"
+      android:layout_width="44dp"
+      android:layout_height="44dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="2dp"
+      android:layout_marginRight="2dp"
+      android:background="@color/actionbar" />
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageAlbum3"
+      android:layout_width="44dp"
+      android:layout_height="44dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="2dp"
+      android:layout_marginRight="2dp"
+      android:background="@color/actionbar" />
+    <LinearLayout
+      android:id="@+id/mobileLibraryBrowserCell_layoutAlbumCount"
+      android:layout_width="44dp"
+      android:layout_height="44dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="2dp"
+      android:layout_marginRight="0dp"
+      android:background="@color/actionbar"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/mobileLibraryBrowserCell_lblAlbumCount"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:text="+2"
+        android:textColor="#FFFFFF"
+        android:textSize="24dp" />
+    </LinearLayout>
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="200dp"
+    android:layout_height="fill_parent"
+    android:layout_gravity="right"
+    android:layout_marginRight="4dp"
+    android:background="@drawable/listgradient_selector"
+    android:orientation="horizontal">
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="52dp"
+    android:paddingLeft="8dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
     <TextView
-      android:id="@+id/mobileLibraryBrowserCell_lblTitleWithSubtitle"
-      android:layout_width="fill_parent"
+      android:id="@+id/mobileLibraryBrowserCell_index"
+      android:layout_width="32dp"
       android:layout_height="wrap_content"
+      android:gravity="center"
+      android:textColor="@color/list_secondarytext"
+      android:textSize="18dp" />
+    <TextView
+      android:id="@+id/mobileLibraryBrowserCell_lblTitle"
+      android:layout_width="0dp"
+      android:layout_height="fill_parent"
+      android:layout_weight="1"
+      android:layout_marginLeft="8dp"      
+      android:gravity="center_vertical"
       android:ellipsize="end"
       android:singleLine="true"
       android:textColor="@color/list_text"
-      android:textSize="16dp" />
-    <TextView
-      android:id="@+id/mobileLibraryBrowserCell_lblSubtitle"
-      android:layout_width="fill_parent"
+      android:textSize="18dp" />
+    <LinearLayout
+      android:id="@+id/mobileLibraryBrowserCell_layoutSubtitle"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:ellipsize="end"
-      android:singleLine="true"
-      android:textColor="@color/list_secondarytext"
-      android:textSize="12dp" />
+      android:layout_weight="1"
+      android:layout_marginLeft="8dp"      
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/mobileLibraryBrowserCell_lblTitleWithSubtitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="@color/list_text"
+        android:textSize="16dp" />
+      <TextView
+        android:id="@+id/mobileLibraryBrowserCell_lblSubtitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="@color/list_secondarytext"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imagePlay"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginRight="6dp"
+      android:visibility="gone"
+      android:background="@android:color/transparent"
+      android:src="@drawable/icon_play" />
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageAdd"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginRight="6dp"
+      android:visibility="gone"
+      android:background="@android:color/transparent"
+      android:src="@drawable/icon_add" />
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageDelete"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginRight="6dp"
+      android:visibility="gone"
+      android:background="@android:color/transparent"
+      android:src="@drawable/icon_trash" />
+    <ImageView
+      android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginRight="6dp"
+      android:visibility="gone"
+      android:background="@android:color/transparent"
+      android:src="@drawable/icon_speaker" />
   </LinearLayout>
-  <ImageView
-    android:id="@+id/mobileLibraryBrowserCell_imagePlay"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:visibility="gone"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_play" />
-  <ImageView
-    android:id="@+id/mobileLibraryBrowserCell_imageAdd"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:visibility="gone"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_add" />
-  <ImageView
-    android:id="@+id/mobileLibraryBrowserCell_imageDelete"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:visibility="gone"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_trash" />
-  <ImageView
-    android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:visibility="gone"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_speaker" />
-</LinearLayout>
+</FrameLayout>
