--- a/MPfm/MPfm.Android/Resources/Layout/PitchShifting.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PitchShifting.axml
@@ -11,7 +11,7 @@
     android:gravity="center_horizontal"
     android:text="Pitch Shifting"
     android:textSize="20dp"
-    android:textColor="#ffffffff"
+    android:textColor="#FFFFFF"
     android:padding="12dp" />
   <RelativeLayout
     android:layout_width="fill_parent"
@@ -32,7 +32,7 @@
         android:gravity="left"
         android:text="Reference key:"
         android:textSize="14dp"
-        android:textColor="#ffffffff"
+        android:textColor="#CCCCCC"
         android:textStyle="bold" />
       <TextView
         android:id="@+id/pitchShifting_lblReferenceKeyValue"
@@ -41,14 +41,14 @@
         android:gravity="left"
         android:text="C (Am)"
         android:textSize="14dp"
-        android:textColor="#ffffffff" />
+        android:textColor="#FFFFFF" />
     </LinearLayout>
     <Button
       android:id="@+id/pitchShifting_btnChangeKey"
       android:layout_width="wrap_content"
       android:layout_height="40dp"
       android:layout_alignParentRight="true"
-      android:padding="4dp"
+      android:padding="12dp"
       android:background="@drawable/transparentbutton_selector"            
       android:text="Change key"
       android:textColor="@color/transparentbutton_textcolor"
@@ -68,7 +68,7 @@
       android:gravity="left"
       android:text="Interval (semitones):"
       android:textSize="14dp"
-      android:textColor="#ffffffff"
+      android:textColor="#CCCCCC"
       android:textStyle="bold" />
     <TextView
       android:id="@+id/pitchShifting_lblNewKey"
@@ -78,7 +78,7 @@
       android:gravity="right"
       android:text="New key:"
       android:textSize="14dp"
-      android:textColor="#ffffffff"
+      android:textColor="#CCCCCC"
       android:textStyle="bold" />
   </RelativeLayout>
   <RelativeLayout
@@ -95,7 +95,7 @@
       android:gravity="left"
       android:text="0"
       android:textSize="14dp"
-      android:textColor="#ffffffff" />
+      android:textColor="#FFFFFF" />
     <TextView
       android:id="@+id/pitchShifting_lblNewKeyValue"
       android:layout_width="match_parent"
@@ -104,7 +104,7 @@
       android:gravity="right"
       android:text="C"
       android:textSize="14dp"
-      android:textColor="#ffffffff" />
+      android:textColor="#FFFFFF" />
   </RelativeLayout>
   <LinearLayout
     android:layout_width="fill_parent"
