--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -20,7 +20,7 @@
       android:layout_marginBottom="4dp"
       android:layout_marginLeft="2dp"
       android:layout_marginRight="2dp"
-      android:background="@color/actionbar" />
+      android:background="#FFFFFF" />
     <ImageView
       android:id="@+id/mobileLibraryBrowserCell_imageAlbum2"
       android:layout_width="44dp"
@@ -29,7 +29,7 @@
       android:layout_marginBottom="4dp"
       android:layout_marginLeft="2dp"
       android:layout_marginRight="2dp"
-      android:background="@color/actionbar" />
+      android:background="#FFFFFF" />
     <ImageView
       android:id="@+id/mobileLibraryBrowserCell_imageAlbum3"
       android:layout_width="44dp"
@@ -38,7 +38,7 @@
       android:layout_marginBottom="4dp"
       android:layout_marginLeft="2dp"
       android:layout_marginRight="2dp"
-      android:background="@color/actionbar" />
+      android:background="#FFFFFF" />
     <LinearLayout
       android:id="@+id/mobileLibraryBrowserCell_layoutAlbumCount"
       android:layout_width="44dp"
@@ -46,7 +46,7 @@
       android:layout_marginTop="4dp"
       android:layout_marginBottom="4dp"
       android:layout_marginLeft="2dp"
-      android:layout_marginRight="0dp"
+      android:layout_marginRight="2dp"
       android:background="@color/actionbar"
       android:orientation="vertical">
       <TextView
@@ -56,7 +56,7 @@
         android:gravity="center"
         android:text="+2"
         android:textColor="#FFFFFF"
-        android:textSize="24dp" />
+        android:textSize="18dp" />
     </LinearLayout>
   </LinearLayout>
   <LinearLayout
