--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -115,37 +115,52 @@
         android:textColor="@color/list_secondarytext"
         android:textSize="12dp" />
     </LinearLayout>
-    <ImageView
-      android:id="@+id/mobileLibraryBrowserCell_imagePlay"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_marginRight="6dp"
-      android:visibility="gone"
-      android:background="@android:color/transparent"
-      android:src="@drawable/icon_play" />
-    <ImageView
-      android:id="@+id/mobileLibraryBrowserCell_imageAdd"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_marginRight="6dp"
-      android:visibility="gone"
-      android:background="@android:color/transparent"
-      android:src="@drawable/icon_add" />
-    <ImageView
-      android:id="@+id/mobileLibraryBrowserCell_imageDelete"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_marginRight="6dp"
-      android:visibility="gone"
-      android:background="@android:color/transparent"
-      android:src="@drawable/icon_trash" />
-    <ImageView
-      android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
-      android:layout_width="48dp"
-      android:layout_height="48dp"
-      android:layout_marginRight="6dp"
-      android:visibility="gone"
-      android:background="@android:color/transparent"
-      android:src="@drawable/icon_speaker" />
+    <LinearLayout
+      android:id="@+id/mobileLibraryBrowserCell_layoutMenu"
+      android:layout_width="200dp"
+      android:layout_height="fill_parent"
+      android:layout_gravity="right"
+      android:layout_marginRight="4dp"
+      android:visibility="gone"      
+      android:gravity="right"
+      android:background="#FFFFFF"
+      android:orientation="horizontal">
+      <ImageButton
+        android:id="@+id/mobileLibraryBrowserCell_imagePlay"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="4dp"
+        android:visibility="gone"
+        android:background="@drawable/albumcellbutton_selector"
+        android:src="@drawable/actionbar_play" />
+      <ImageButton
+        android:id="@+id/mobileLibraryBrowserCell_imageAdd"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="4dp"        
+        android:layout_marginRight="4dp"
+        android:visibility="gone"
+        android:background="@drawable/albumcellbutton_selector"
+        android:src="@drawable/actionbar_add" />
+      <ImageButton
+        android:id="@+id/mobileLibraryBrowserCell_imageDelete"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="4dp"        
+        android:visibility="gone"
+        android:background="@drawable/albumcellbutton_selector"
+        android:src="@drawable/actionbar_trash" />
+      <ImageView
+        android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="4dp"        
+        android:visibility="gone"
+        android:background="@android:color/transparent"
+        android:src="@drawable/icon_speaker" />      
+    </LinearLayout>
   </LinearLayout>
 </FrameLayout>
