Android: Added ViewHolder pattern and fixed bugs for secondary menu of ListView and GridView of MobileLibraryBrowser. Fixed several bugs with album art in Artist cell. Added logic to IPlayerStatusView; now used by LockScreenActivity and MainActivity. Splash screen is now hidden correctly after second app start.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -83,7 +83,7 @@
             android:layout_width="60dp"
             android:layout_height="44dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/player_pause"
+            android:src="@drawable/player_play"
             android:padding="20dp" />
           <ImageButton
             android:id="@+id/main_miniplayer_btnNext"
@@ -129,69 +129,78 @@
       <LinearLayout
         android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
+        android:layout_weight="1"        
         android:orientation="vertical">
         <LinearLayout
-          android:layout_width="fill_parent"
-          android:layout_height="24dp"
-          android:paddingLeft="8dp"
-          android:paddingRight="8dp"
-          android:paddingTop="4dp"
+          android:layout_width="wrap_content"
+          android:layout_height="fill_parent"
+          android:layout_gravity="center_vertical"
           android:orientation="horizontal">
-          <TextView
-            android:id="@+id/main_miniplaylist_lblPlaylist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"            
-            android:textColor="#CCCCCC"
-            android:text="Playlist:"
-            android:textSize="14dp"
-            android:ellipsize="end"
-            android:singleLine="true" />
-          <TextView
-            android:id="@+id/main_miniplaylist_lblNextSong"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textColor="#CCCCCC"
-            android:text="Next Song:"
-            android:textSize="14dp"
-            android:ellipsize="end"
-            android:singleLine="true" />
-        </LinearLayout>
-        <LinearLayout
-          android:layout_width="fill_parent"
-          android:layout_height="68dp"
-          android:layout_marginTop="4dp"
-          android:layout_marginBottom="24dp"
-          android:orientation="horizontal">
-          <ImageButton
-            android:id="@+id/main_miniplaylist_btnPlaylist"
-            android:layout_width="60dp"
-            android:layout_height="44dp"
-            android:padding="20dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/player_playlist" />
           <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:orientation="vertical"
-            android:paddingLeft="8dp">
+            android:layout_gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+              android:id="@+id/main_miniplaylist_btnRepeat"
+              android:layout_width="60dp"
+              android:layout_height="44dp"
+              android:padding="20dp"
+              android:background="@android:color/transparent"
+              android:src="@drawable/player_repeat" />
             <TextView
-              android:id="@+id/main_miniplaylist_lblPlaylistTitle"
-              android:layout_width="wrap_content"
+              android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:text="[Playlist name]"
-              android:textColor="#EEEEEE"
-              android:textSize="14dp"
+              android:layout_marginBottom="10dp"
+              android:gravity="center"
+              android:text="Off"
+              android:textColor="#CCCCCC"
+              android:textSize="12dp"
               android:ellipsize="end"
               android:singleLine="true" />
+          </LinearLayout>
+          <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+              android:id="@+id/main_miniplaylist_btnShuffle"
+              android:layout_width="60dp"
+              android:layout_height="44dp"
+              android:padding="20dp"
+              android:background="@android:color/transparent"
+              android:src="@drawable/player_shuffle" />
+            <TextView
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="10dp"
+              android:gravity="center"
+              android:text="Off"
+              android:textColor="#CCCCCC"
+              android:textSize="12dp"
+              android:ellipsize="end"
+              android:singleLine="true" />
+          </LinearLayout>
+          <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+              android:id="@+id/main_miniplaylist_btnPlaylist"
+              android:layout_width="60dp"
+              android:layout_height="44dp"
+              android:padding="20dp"
+              android:background="@android:color/transparent"
+              android:src="@drawable/player_playlist" />
             <TextView
               android:id="@+id/main_miniplaylist_lblPlaylistCount"
-              android:layout_width="wrap_content"
+              android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:text="[Playlist count]"
+              android:layout_marginBottom="10dp"
+              android:gravity="center"
+              android:text="0 / 0"
               android:textColor="#CCCCCC"
               android:textSize="12dp"
               android:ellipsize="end"
@@ -199,14 +208,130 @@
           </LinearLayout>
           <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginTop="4dp"
-            android:gravity="right"
-            android:background="@drawable/miniplayerchevron_selector"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:orientation="vertical"
             android:paddingLeft="8dp"
             android:paddingRight="8dp">
+            <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="22dp"              
+              android:orientation="horizontal">
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum1"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum2"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum3"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum4"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:background="@color/background" />
+            </LinearLayout>
+            <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="22dp"
+              android:layout_marginTop="4dp" 
+              android:orientation="horizontal">
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum5"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum6"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum7"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum8"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:background="@color/background" />
+            </LinearLayout>
+            <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="22dp"
+              android:layout_marginTop="4dp" 
+              android:orientation="horizontal">
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum9"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum10"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <ImageView
+                android:id="@+id/main_miniplaylist_imageAlbum11"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@color/background" />
+              <LinearLayout
+                android:id="@+id/main_miniplaylist_layoutAlbumCount"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="2dp"
+                android:background="@color/background"
+                android:orientation="vertical">
+                <TextView
+                  android:id="@+id/main_miniplaylist_lblAlbumCount"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:gravity="center"
+                  android:text="+2"
+                  android:textColor="#FFFFFF"
+                  android:textSize="12dp" />
+              </LinearLayout>
+            </LinearLayout>
+            <TextView
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:visibility="gone"
+              android:layout_marginTop="4dp" 
+              android:gravity="right"
+              android:text="Length: 110:34"
+              android:textColor="#CCCCCC"
+              android:textSize="11dp" />
             <TextView
               android:id="@+id/main_miniplaylist_lblNextArtistName"
               android:layout_width="wrap_content"
@@ -214,6 +339,7 @@
               android:gravity="right"
               android:textColor="#FFFFFF"
               android:text="[Artist name]"
+              android:visibility="gone"
               android:textSize="14dp"
               android:ellipsize="end"
               android:singleLine="true" />
@@ -223,6 +349,7 @@
               android:layout_height="wrap_content"
               android:gravity="right"
               android:text="[Album title]"
+              android:visibility="gone"
               android:textColor="#EEEEEE"
               android:textSize="12dp"
               android:ellipsize="end"
@@ -233,6 +360,7 @@
               android:layout_height="wrap_content"
               android:gravity="right"
               android:text="[Title]"
+              android:visibility="gone"
               android:textColor="#CCCCCC"
               android:textSize="11dp"
               android:ellipsize="end"
