--- a/MPfm/MPfm.Android/Resources/Layout/AlbumCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/AlbumCell.axml
@@ -54,6 +54,8 @@
       android:layout_height="wrap_content"
       android:paddingLeft="4dp"
       android:paddingRight="4dp"
+      android:paddingTop="2dp"
+      android:paddingBottom="0dp"
       android:gravity="center_vertical"
       android:textStyle="bold"
       android:textColor="#FFFFFF"
@@ -66,6 +68,8 @@
       android:layout_height="wrap_content"
       android:paddingLeft="4dp"
       android:paddingRight="4dp"
+      android:paddingTop="0dp"
+      android:paddingBottom="4dp"
       android:gravity="center_vertical"
       android:textColor="#FFFFFF"
       android:textSize="12dp"
