WindowsStore: Now bootstrapping the application using TinyIoC (no NavigationManager yet). This means TinyIoC PCL works fine under WindowsStore!
Related to issue #423.

--- a/MPfm/MPfm.WindowsStore/App.xaml
+++ b/MPfm/MPfm.WindowsStore/App.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MPfm.WindowsStore"
-    xmlns:localData="using:MPfm.WindowsStore.Data">
+    xmlns:localData="using:MPfm.WindowsStore.Data"
+    RequestedTheme="Light">
 
     <Application.Resources>
         <ResourceDictionary>
