WindowsStore/WindowsPhone: Unfortunately, taglib-sharp doesn't work since it's not built for WinRT. A special build will be necessary (similar to TinyIoC).
Related to issue #423 and issue #424.

--- a/MPfm/MPfm.WindowsPhone/MainPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/MainPage.xaml
@@ -47,6 +47,7 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Button Content="Button" HorizontalAlignment="Left" Margin="204,157,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
         </Grid>
 
