--- a/MPfm/MPfm.WindowsPhone/MainPage.xaml
+++ b/MPfm/MPfm.WindowsPhone/MainPage.xaml
@@ -48,6 +48,7 @@
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <Button Content="Button" HorizontalAlignment="Left" Margin="204,157,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+            <TextBlock x:Name="txtStuff" HorizontalAlignment="Left" Margin="92,52,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
         </Grid>
 
