--- a/MPfm/MPfm.Android/Resources/Layout/AddNewPlaylist.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/AddNewPlaylist.axml
@@ -8,35 +8,22 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:padding="12dp"      
-    android:text="The selected audio files will be added to the following playlist:"
+    android:text="Please enter a name for the new playlist:"
     android:textColor="#AAAAAA"
     android:textSize="14dp" />
-  <Button
-    android:id="@+id/selectPlaylist_btnAddNewPlaylist"
+  <EditText
+    android:id="@+id/addNewPlaylist_txtName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:drawableLeft="@drawable/actionbar_add"
-    android:drawablePadding="2dp"
-    android:background="@drawable/dialogbutton_selector"
-    android:text="Add new playlist"
-    android:textColor="@color/dialogbutton_text"
-    android:textSize="14dp"
-    android:padding="6dp" />
-  <ListView
-    android:id="@+id/selectPlaylist_listView"
-    android:layout_width="fill_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:cacheColorHint="#333333"
-    android:divider="#999999"
-    android:dividerHeight="1px"
-    android:listSelector="#66CCCCCC" />
+    android:padding="12dp"
+    android:textSize="16dp"
+    android:textColor="#FFFFFF" />
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"    
     android:orientation="horizontal">
     <Button
-      android:id="@+id/selectPlaylist_btnCancel"
+      android:id="@+id/addNewPlaylist_btnCancel"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
@@ -48,14 +35,14 @@
       android:textSize="14dp"
       android:padding="6dp" />
     <Button
-      android:id="@+id/selectPlaylist_btnSelect"
+      android:id="@+id/addNewPlaylist_btnCreate"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:drawableLeft="@drawable/actionbar_select"
       android:drawablePadding="2dp"      
       android:background="@drawable/dialogbutton_selector"
-      android:text="Select"
+      android:text="Create"
       android:textColor="@color/dialogbutton_text"
       android:textSize="14dp"
       android:padding="6dp" />
