--- a/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlaylistCell.axml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/playlistcell_title"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="44dp"
-  android:minHeight="44dp"
-  android:maxHeight="44dp"          
-  android:padding="6dp"
-  android:gravity="center_vertical"
-  android:textColor="@color/dialoglist_text"
-  android:textSize="16dp" />
+  android:orientation="horizontal">  
+  <TextView
+    android:id="@+id/playlistcell_title"
+    android:layout_width="0dp"
+    android:layout_height="44dp"
+    android:layout_weight="1"
+    android:minHeight="44dp"
+    android:maxHeight="44dp"          
+    android:padding="6dp"
+    android:gravity="center_vertical"
+    android:textColor="@color/dialoglist_text"
+    android:textSize="16dp" />
+  <TextView
+    android:id="@+id/playlistcell_count"
+    android:layout_width="60dp"
+    android:layout_height="44dp"
+    android:layout_gravity="center_vertical"
+    android:padding="6dp"
+    android:gravity="right"
+    android:textColor="@color/dialoglist_text"
+    android:textSize="16dp" />
+</LinearLayout>
