--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -66,7 +66,7 @@
       android:id="@+id/player_layoutButtons"
       android:layout_width="fill_parent"
       android:layout_height="60dp"
-      android:background="@color/actionbar"
+      android:background="@color/background"
       android:orientation="horizontal"
       android:gravity="center">
     <ImageButton
